--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,30 +12,30 @@
 	},
 	"dependencies": {
 		"@tabler/icons-react": "^3.33.0",
-		"@tanstack/react-query": "^5.76.1",
-		"@tanstack/react-router": "^1.120.5",
-		"@tanstack/react-router-devtools": "^1.120.6",
+		"@tanstack/react-query": "^11.6.0",
+		"@tanstack/react-form": "^1.23.0",
+		"@tanstack/react-router": "^1.132.0",
+		"@tanstack/router-plugin": "^1.132.0",
+		"@tanstack/react-router-devtools": "^1.132.0",
 		"@tanstack/react-store": "^0.7.0",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"sass": "^1.89.0"
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
+		"sass": "^1.93.0"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.25.0",
-		"@swc/cli": "^0.7.7",
-		"@swc/core": "^1.11.29",
-		"@tanstack/react-form": "^1.11.2",
-		"@tanstack/router-plugin": "^1.120.5",
-		"@types/react": "^19.1.2",
-		"@types/react-dom": "^19.1.2",
-		"@vitejs/plugin-react-swc": "^3.9.0",
-		"eslint": "^9.25.0",
-		"eslint-plugin-react-hooks": "^5.2.0",
-		"eslint-plugin-react-refresh": "^0.4.19",
-		"globals": "^16.0.0",
-		"typescript": "~5.8.3",
-		"typescript-eslint": "^8.30.1",
-		"vite": "^6.3.5"
+		"@eslint/js": "^9.37.0",
+		"@swc/cli": "^0.7.8",
+		"@swc/core": "^1.13.5",
+		"@types/react": "^19.2.2",
+		"@types/react-dom": "^19.2.2",
+		"@vitejs/plugin-react-swc": "^4.1.0",
+		"eslint": "^9.37.0",
+		"eslint-plugin-react-hooks": "^7.0.0.",
+		"eslint-plugin-react-refresh": "^0.4.23",
+		"globals": "^16.4.0",
+		"typescript": "~5.9.3",
+		"typescript-eslint": "^8.46.0",
+		"vite": "^7.1.9"
 	},
 	"packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
