--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,41 +1,41 @@
 {
-	"name": "frontend",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build-new": "tsc -b && vite build",
-		"build": "swc src -d dist --strip-leading-paths && vite build",
-		"lint": "eslint",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@tabler/icons-react": "^3.33.0",
-		"@tanstack/react-query": "^11.6.0",
-		"@tanstack/react-form": "^1.23.0",
-		"@tanstack/react-router": "^1.132.0",
-		"@tanstack/router-plugin": "^1.132.0",
-		"@tanstack/react-router-devtools": "^1.132.0",
-		"@tanstack/react-store": "^0.7.0",
-		"react": "^19.2.0",
-		"react-dom": "^19.2.0",
-		"sass": "^1.93.0"
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.37.0",
-		"@swc/cli": "^0.7.8",
-		"@swc/core": "^1.13.5",
-		"@types/react": "^19.2.2",
-		"@types/react-dom": "^19.2.2",
-		"@vitejs/plugin-react-swc": "^4.1.0",
-		"eslint": "^9.37.0",
-		"eslint-plugin-react-hooks": "^7.0.0.",
-		"eslint-plugin-react-refresh": "^0.4.23",
-		"globals": "^16.4.0",
-		"typescript": "~5.9.3",
-		"typescript-eslint": "^8.46.0",
-		"vite": "^7.1.9"
-	},
-	"packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build-new": "tsc -b && vite build",
+    "build": "swc src -d dist --strip-leading-paths && vite build",
+    "lint": "eslint",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@tabler/icons-react": "^3.33.0",
+    "@tanstack/react-form": "^1.23.0",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-router": "^1.132.0",
+    "@tanstack/react-router-devtools": "^1.132.0",
+    "@tanstack/react-store": "^0.7.0",
+    "@tanstack/router-plugin": "^1.132.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "sass": "^1.93.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "@swc/cli": "^0.7.8",
+    "@swc/core": "^1.13.5",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@vitejs/plugin-react-swc": "^4.1.0",
+    "eslint": "^9.37.0",
+    "eslint-plugin-react-hooks": "^7.0.0",
+    "eslint-plugin-react-refresh": "^0.4.23",
+    "globals": "^16.4.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.0",
+    "vite": "^7.1.9"
+  },
+  "packageManager": "pnpm@10.18.2"
 }
