--- a/frontend/packages/app/package.json
+++ b/frontend/packages/app/package.json
@@ -10,29 +10,30 @@
     "lint": "pnpm exec eslint"
   },
   "dependencies": {
+    "@floating-ui/react-dom": "^2.1.6",
     "@tabler/icons-react": "^3.33.0",
     "@tanstack/react-form": "^1.23.0",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-router": "^1.132.0",
-    "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/router-plugin": "^1.132.0",
-    "aster-common": "link:../common/build/dist/js/productionLibrary",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "sass": "^1.93.0"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@swc/cli": "^0.7.8",
     "@swc/core": "^1.13.5",
+    "@tanstack/react-router-devtools": "^1.132.0",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "aster-common": "link:../common/build/dist/js/productionLibrary",
     "eslint": "^9.37.0",
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.23",
     "globals": "^16.4.0",
+    "sass": "^1.93.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.0",
     "vite": "^7.1.9"
